--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -49,7 +49,7 @@
         }
       },
       "id": "UlxioxqVnTeW",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +88,7 @@
         }
       },
       "id": "MEBU3q0Xotku",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -407,7 +407,7 @@
         }
       },
       "id": "kCNJGlhUoxfo",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -753,7 +753,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Manhattan is the most expensive neighborhood at an average $183 a night."
+        "> Manhattan is the most expensive neighborhood at an average $183 a night."
       ],
       "metadata": {
         "id": "oCm54_I2o4op"
@@ -778,7 +778,7 @@
         }
       },
       "id": "RmZDVe8GpFD0",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -825,7 +825,7 @@
         }
       },
       "id": "S-AkmBYPpsAQ",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1145,7 +1145,7 @@
         }
       },
       "id": "RpLO8cDEyYe1",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1439,7 +1439,7 @@
         }
       },
       "id": "1gn1EKwKyd_O",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1449,6 +1449,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Bronx was dropped, and the coefficient turned into the value of the intercept. The coefficients are now relative to the Bronx, adding the values to the intercept will give the previous coefficients."
+      ],
+      "metadata": {
+        "id": "EaDGg-ZVg8l2"
+      },
+      "id": "EaDGg-ZVg8l2"
     },
     {
       "cell_type": "code",
@@ -1466,7 +1476,7 @@
         }
       },
       "id": "BVEZjY6HyfUH",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1785,7 +1795,7 @@
         }
       },
       "id": "vfqiVWM4yhir",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2099,7 +2109,7 @@
         }
       },
       "id": "ZJ6QMMXxysbn",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2112,6 +2122,16 @@
           "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> The most expensive property is in Manhattan for around 192.64 a night."
+      ],
+      "metadata": {
+        "id": "anNIP_szhm1K"
+      },
+      "id": "anNIP_szhm1K"
     },
     {
       "cell_type": "code",
@@ -2149,7 +2169,7 @@
         }
       },
       "id": "DTDQjb5Iyue-",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2471,6 +2491,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# most expensive property, 100-rated home in Manhattan.\n",
         "110.617+53.69+100*.0626"
       ],
       "metadata": {
@@ -2481,7 +2502,7 @@
         }
       },
       "id": "EfI0nZx5y3Yd",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2494,6 +2515,17 @@
           "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PART 6\n",
+        "> The coefficient changes because in part 5 we accounted for the room type as well. Some of the previous variation was explained by room types, so when we controll for it, the coefficient gets smaller."
+      ],
+      "metadata": {
+        "id": "BGDAsXNeiqzy"
+      },
+      "id": "BGDAsXNeiqzy"
     },
     {
       "cell_type": "markdown",
@@ -2540,7 +2572,7 @@
         }
       },
       "id": "F750efcW1dAm",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2577,7 +2609,7 @@
         }
       },
       "id": "c5q2mH_J1kS3",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2609,7 +2641,7 @@
         }
       },
       "id": "wacXs4pp10NI",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2649,7 +2681,7 @@
         }
       },
       "id": "bTlMuOFK5vgj",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3128,6 +3160,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "> MG Motors are the most expensive, and Kia is also quite expensive. Most car prices only have one peak, but some have multiple."
+      ],
+      "metadata": {
+        "id": "0OIVLARelJ_I"
+      },
+      "id": "0OIVLARelJ_I"
+    },
+    {
       "cell_type": "code",
       "source": [
         "sns.kdeplot(data=df,x='price_ihs',hue='Make')\n",
@@ -3142,7 +3184,7 @@
         }
       },
       "id": "Iec5UpsZ52_Y",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3638,7 +3680,7 @@
         "id": "FUv0qRU76Amo"
       },
       "id": "FUv0qRU76Amo",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3667,7 +3709,7 @@
         }
       },
       "id": "7CXMfu2A6l9k",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3685,15 +3727,15 @@
         "import pandas as pd\n",
         "# Categorical regression:\n",
         "var_cat = ['Make','Body_Type','Color','Fuel_Type','Transmission','Transmission_Type']\n",
-        "#\n",
-        "# Use a loop to make the dummy dataframe, but you could do it by hand in a bunch of lines:\n",
-        "dummies = pd.DataFrame([]) # In general, use lists and append instead of DataFrame and pd.concat\n",
+        "\n",
+        "# Use a loop to make the dummy dataframe:\n",
+        "dummies = pd.DataFrame([]) # lists and append instead of DataFrame and pd.concat\n",
         "for var in var_cat:\n",
         "    new_dummies = pd.get_dummies( df.loc[:,var], drop_first=True, dtype=int)\n",
         "    dummies = pd.concat([dummies, new_dummies], axis=1, ignore_index=True)\n",
         "    X_train_c = dummies.iloc[0:train_size,:]\n",
         "    X_test_c = dummies.iloc[train_size:,:]\n",
-        "#\n",
+        "\n",
         "reg_c = linear_model.LinearRegression().fit(X_train_c,y_train) # Run regression\n",
         "y_hat_c = reg_c.predict(X_test_c)\n",
         "print('Categorical only Rsq: ', reg_c.score(X_test_c,y_test)) # R2\n",
@@ -3708,7 +3750,7 @@
         }
       },
       "id": "4EiEfvjSvgfX",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3719,6 +3761,26 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Combine num and cat var:\n",
+        "X_train_all = pd.concat([X_train_n, X_train_c],axis=1, ignore_index=True)\n",
+        "X_test_all = pd.concat([X_test_n, X_test_c],axis=1, ignore_index=True)\n",
+        "\n",
+        "reg_all = linear_model.LinearRegression().fit(X_train_all,y_train) # Run regression\n",
+        "y_hat_all = reg_all.predict(X_test_all)\n",
+        "print('All Rsq: ', reg_all.score(X_test_all,y_test)) # R2\n",
+        "rmse_all = np.sqrt( np.mean( (y_test - y_hat_all)**2 ))\n",
+        "print('All RMSE: ', rmse_all) # R2"
+      ],
+      "metadata": {
+        "id": "bj08nVf9mSlT"
+      },
+      "id": "bj08nVf9mSlT",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3761,7 +3823,7 @@
         "outputId": "2db7b227-3a81-4ad9-af48-176a18babdd3"
       },
       "id": "WDOlXZuq2GC7",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3825,7 +3887,7 @@
         "outputId": "5625b56e-fbbc-44dc-c3e2-267d7c939984"
       },
       "id": "smEnFPV3FhBp",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3850,6 +3912,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "> The graph looks relatively linear."
+      ],
+      "metadata": {
+        "id": "z1dsRpA9k9DP"
+      },
+      "id": "z1dsRpA9k9DP"
+    },
+    {
       "cell_type": "code",
       "source": [
         "sns.kdeplot(residuals)"
@@ -3863,7 +3935,7 @@
         "outputId": "785f6c7d-62ab-4e03-998b-1e977da06921"
       },
       "id": "QoytSbvnQUf3",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3886,6 +3958,16 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> This is bimodel with a small left tail. It is mostly symmetric around zero and bell-shaped."
+      ],
+      "metadata": {
+        "id": "F-pU8imKj5Qy"
+      },
+      "id": "F-pU8imKj5Qy"
     },
     {
       "cell_type": "code",
@@ -3918,7 +4000,7 @@
         "outputId": "df6ec81c-76eb-4dd3-c0f8-662ce6171315"
       },
       "id": "cac3fWqjQa3X",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
